<resources>
    <string name="app_name">Own Banking</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_personal_details">Personal Details</string>
    <string name="title_thank_you">Thank you!</string>
    <string name="title_error_dialog">Sorry...</string>

    <string name="field_email">Email</string>
    <string name="field_password">Password</string>

    <string name="button_log_in">Log in</string>
    <string name="button_register">Register</string>
    <string name="button_continue">Continue</string>
    <string name="button_register_finish">Go to dashboard</string>
    <string name="button_take_photo">Tomar foto</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>

    <string name="description_authentication_error">An error occurred while your authentication.\nCheck your information and try again.</string>
    <string name="description_photo_error">An error occurred validating your photo.\nPlease try again.</string>
    <string name="description_take_photo">Take a photo of your ID Card</string>
    <string name="description_congrats_message">Your account has been registered successfully!</string>
    <string name="title_identification">Identification</string>

    <string name="label_account">Account</string>
    <string name="label_transfer">Transfer</string>

    <string name="separator_or">or</string>
    <string name="field_last_name">Last Name</string>
    <string name="field_first_name">First Name</string>
    <string name="field_repeat_password">Repeat password</string>

    <string name="error_field_inconsistency">Los campos deben coincidir</string>
    <string name="error_field_email_invalid">Debe ser un email válido</string>
    <string name="error_field_pass_invalid">Debe tener al menos 8 digitos</string>
    <string name="error_field_empty">Debe completar este campo</string>

    <string name="sample_email">roberto.gonzalez@gmail.com</string>
    <string name="sample_surname">Gonzalez</string>
    <string name="sample_name">Roberto</string>
    <string name="sample_password">12345678</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>